14erEdit should no longer be able to crash servers